<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/close_icon"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="@dimen/icon_close"
        android:layout_height="@dimen/icon_close"
        android:src="@drawable/ic_close_black"/>
    <TableLayout
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:id="@+id/campus_TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/seu_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:forceHasOverlappingRendering="true"
            android:text="@string/string_seu"
            android:textSize="24sp" />
        <TableRow>
            <TextView
                android:id="@+id/JiuLongHu_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/string_jiulonghu_campus"
                android:textSize="20sp"
                android:textColor="@color/selector_text_campus"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
            <TextView
                android:id="@+id/SiPaiLou_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/string_sipailou_campus"
                android:textColor="@color/selector_text_campus"
                android:textSize="20sp"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/DingJiaQiao_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/string_dingjiaqiao_campus"
                android:textSize="20sp"
                android:textColor="@color/selector_text_campus"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="30dp"
            android:id="@+id/nuaa_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/string_nuaa_campus"
            android:textSize="24sp"
            />
        <TableRow
            android:layout_marginLeft="30dp">
            <TextView
                android:id="@+id/JiangJunLu_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/string_jinagjunlu_campus"
                android:textSize="20sp"
                android:textColor="@color/selector_text_campus"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
            <TextView
                android:id="@+id/MingGuGong_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/string_minggugong_campus"
                android:textSize="20sp"
                android:textColor="@color/selector_text_campus"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/hhu_textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/string_hhu"
            android:textSize="24sp"
            />
        <TableRow>
            <TextView
                android:id="@+id/JiangNing_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/string_jiangning_campus"
                android:textSize="20sp"
                android:textColor="@color/selector_text_campus"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
            <TextView
                android:id="@+id/GuLou_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/string_gulou_campus"
                android:textSize="20sp"
                android:textColor="@color/selector_text_campus"
                android:background="@drawable/campus_button_shape"
                android:onClick="click"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="200dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="119dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="确认"
        android:background="@drawable/button"
        android:textColor="#ffff"/>

    </LinearLayout>
</ScrollView>