<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
        <!--在代码中用Glide来加载圆角-->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/PhoneNumText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edit_text"
            android:textColor="@color/colorBrown"
            android:hint="@string/string_inputPhoneNum"
            android:digits="0123456789"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/VerificationCodeText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1.5"
                android:background="@drawable/bg_edit_text"
                android:textColor="@color/colorBrown"
                android:hint="@string/string_inputVerificationCode"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_getVerificationCode"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_code"
                android:text="@string/string_getVerificationCode"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/button_logReg"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="登陆/注册"
            android:background="@drawable/button"
            android:textColor="#ffff"/>
    </LinearLayout>


</LinearLayout>